styles.css
/* === FONTS === */

/* space-mono-700 - latin */
@font-face {
  font-family: 'Space Mono';
  src: url('assets/fonts/space-mono-v17-latin-700.woff2') format('woff2'); 
  font-weight: 700;
  font-style: normal;
  font-display: swap;
}

/* === CSS RESET === */

/* Box sizing rules */
*,
*::before,
*::after {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

/* Prevent font size inflation */
html {
  -moz-text-size-adjust: none;
  -webkit-text-size-adjust: none;
  text-size-adjust: none;
}

/* Remove default margin in favour of better control in authored CSS */
body, h1, h2, h3, h4, p,
figure, blockquote, dl, dd {
  margin-block-end: 0;
}

/* Set shorter line heights on headings and interactive elements */
h1, h2, h3, h4,
button, input, label {
  line-height: 1.1;
}

/* Balance text wrapping on headings */
h1, h2,
h3, h4 {
  text-wrap: balance;
}

/* A elements that don't have a class get default styles */
a:not([class]) {
  text-decoration-skip-ink: auto;
  color: currentColor;
}

/* Make images easier to work with */
img,
picture {
  max-width: 100%;
  display: block;
}

/* Inherit fonts for inputs and buttons */
input, button,
textarea, select {
  font-family: inherit;
  font-size: inherit;
}

/* Make sure textareas without a rows attribute are not tiny */
textarea:not([rows]) {
  min-height: 10em;
}

/* Anything that has been anchored to should have extra scroll margin */
:target {
  scroll-margin-block: 5ex;
}

/* === CSS CUSTOM VARIABLES === */

:root {
  /* == COLOR PALLETTE == */

  /* Primary Color */
  --clr-green-400: hsl(172, 67%, 45%);

  /* Neutral Colors */
  --clr-grey-50: hsl(189, 47%, 97%);
  --clr-grey-200:  hsl(185, 41%, 84%);
  --clr-grey-400: hsl(184, 14%, 56%);
  --clr-grey-500: hsl(186, 14%, 43%);
  --clr-white: hsl(0, 100%, 100%);
  --clr-green-900: hsl(183, 100%, 15%);
  --clr-red: hsl(4, 100%, 67%);

  /* == TYPOGRAPHY == */

  /* font family */
  --ff-body: 'Space Mono', sans-serif;

  /* font size */
  --fs-form-input: 1.5rem;

  /* font weights */
  --fw-bold: 700;

  /* Spacing */
  --space-xs: 0.5rem;
  --space-sm: 1rem;
  --space-md: 1.5rem;
  --space-lg: 2rem;
  --space-xlg: 2.5rem;
  --space-xxlg: 3rem;
}

body {
  min-height: 100vh;
  background-color: var(--clr-grey-200);
  display: flex;
  flex-direction: column;
  align-items: center;
  font-family: var(--ff-body);
  line-height: 1.5;
}

header {
  margin-block: var(--space-xxlg);
}

.main__content--wrapper {
  width: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
  background-color: var(--clr-white);
  border-top-left-radius: var(--space-md);
  border-top-right-radius: var(--space-md);
  padding: clamp(1.4rem, 1.5vw, 2rem);
}

.main--heading {
  color: var(--clr-grey-500);
  margin-block: var(--space-md);
  text-align: center;
}

.sr-only {
  position: absolute;
  width: 0.0625rem;
  height: 0.0625rem;
  padding: 0;
  margin: -0.0625rem;
  overflow: hidden;
  clip: rect(0, 0, 0, 0);
  white-space: nowrap;
  border: 0
}

.main__bill--container, .main__selection--container {
  margin-block-end: 2rem;
}

.main__bill--container, .main__count--container {
  display: flex;
  flex-direction: column;
  gap: 0.8rem;
}

.main__count--container {
  gap: 0.2rem;
}

.label {
  font-size: 1.2rem;
}

.input {
  all: unset;
  width: 100%;
  background-color: var(--clr-grey-50);
  padding-block: 0.6rem;
  padding-inline-end: 1rem;
  box-sizing: border-box;
  border-radius: 0.4rem;
  color: var(--clr-green-900);
  text-align: right;
  font-size: 1.6em;
  border: 0.125rem solid transparent;
}

.input--container {
  position: relative;
  margin-block-start: 0.3rem;
}

.input--icon {
  position: absolute;
  left: 0.75rem;
  top: 50%;
  transform: translateY(-50%);
  pointer-events: none;
}

input.valid {
  border: 0.125rem solid var(--clr-green-400);
}

input.invalid {
  border: 0.125rem solid var(--clr-red);
}

.main__selection--container {
  width: 100%;
  display: flex;
  flex-direction: column;
  gap: 1rem;
}

.main__tip--container {
  width: 100%;
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  gap: 0.5rem;
  color: var(--clr-white);
  font-size: var(--fs-form-input);
  text-align: center;
}

.preset--btn {
  -webkit-tap-highlight-color: transparent;
}

.preset--btn, .custom--input {
  all: unset;
  box-sizing: border-box;
  background-color: var(--clr-green-900);
  border-radius: 0.3rem;
  cursor: pointer;
  width: 100%;
  padding-block: 0.5rem;
}

.preset--btn.active {
  background-color: var(--clr-green-400);
}

@media (hover: hover) {
  .preset--btn:not(.active):hover {
    background-color: var(--clr-grey-200);
    color: var(--clr-green-900);
  }
}

.visually-hidden {
  position: absolute;
  width: 0.0625rem;
  height: 0.0625rem;
  padding: 0;
  margin: -0.0625rem;
  overflow: hidden;
  clip: rect(0, 0, 0, 0);
  white-space: nowrap;
  border: 0;
}

.custom--input  {
  background-color: var(--clr-grey-50);
  color: var(--clr-green-900);
  border: 0.125rem solid transparent;
}

.custom--input.valid {
  border: 0.125rem solid var(--clr-green-400);
}

.custom--input.invalid {
  border: 0.125rem solid var(--clr-red);
}

/* Chrome, Safari, Edge, Opera */
input[type="number"]::-webkit-outer-spin-button,
input[type="number"]::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.error--label--container {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.error--message {
  display: block;
  color: var(--clr-red);
  min-height: 1rem;
  font-size: 0.8rem;
}

.main__output--card {
  width: 100%;
  background-color: var(--clr-green-900);
  padding: var(--space-md) var(--space-md);
  border-radius: var(--space-sm);
  display: flex;
  flex-direction: column;
  gap: var(--space-md);
  margin: 2rem 1.5rem 1rem;
}

.output__card--heading {
  color: var(--clr-white);
}

.output__card--text {
  color: var(--clr-grey-500);
}

.tip__amount--container, .total__amount--container {
  display: flex;
  justify-content: space-between;
  font-size: var(--fs-form-input);
}

.tip__amount--container {
  margin-block-start: 0.5rem;
}

.tip--amount, .total {
  color: var(--clr-green-400);
}

.reset--btn {
  border: none;
  background-color: var(--clr-green-400);
  font-size: 1.2em;
  color: var(--clr-green-900);
  padding: 0.6rem 3rem;
  border-radius: 0.3rem;
  cursor: pointer;
  margin-block-start: 0.5rem;
}

.reset--btn:disabled {
  cursor: not-allowed;
  opacity: 0.2;
}

.reset--btn:hover {
  background-color: var(--clr-grey-200);
}

@media screen and (min-width: 28.75rem) {
  body {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    background-color: var(--clr-grey-200);
  }

  .main__content--container {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    background-color: var(--clr-grey-200);
  }

  .main__content--wrapper {
    display: flex;
    align-items: center;
    justify-content: center;
    width: 90%;
    border-radius: 1.5rem;
    padding: 2.5rem 2.5rem 1.5rem;
  }

  .main__calculator--dashboard {
    width: 100%;
  }

  header {
    margin-block: var(--space-md);
  }

  .main__tip--container {
    gap: 1rem;
  }

  .label {
    font-size: 1.5rem;
  }

  .input {
    padding-block: 1rem;
  }

  .main__output--card {
    margin-block-end: 0.3rem;
  }
  
}

@media screen and (min-width: 57.5rem) {

  .main__content--wrapper {
    width: 82vw;
    max-width: 75rem;
    display: grid;
    grid-template-columns:  repeat(2, 1fr);
    grid-template-rows: 1fr;
    gap: 2.5rem;
    border-radius: 1rem;
    padding: 2rem  1.5rem  2rem 2.5rem;
  }

  .main__calculator--dashboard {
    min-width: 30vw;
    display: flex;
    flex-direction: column;
    gap: 1.4rem;
  }

  header {
    margin-block: 2rem;
  }

  .input {
    padding-block: 0.5rem;
  }

  .main__tip--container {
    grid-template-columns: repeat(3, 1fr);
    grid-template-rows: repeat(2, 1fr);
  }

  .main__bill--container, .main__selection--container {
    margin-block-end: 0.5rem;
  }

  .main__output--card {
    min-width: 25vw;
    min-height: 100%;
    margin: 0;
    padding: 1.5rem;
    font-size: 1.5rem;
  }

  .tip__amount--container {
    margin-block-start: 1.2rem;
  }

  .tip--amount, .total {
    font-size: 1.5em;
  }

  .reset--btn {
    margin-block-start: 7rem;
    font-size: 1em;
  }
}

